--- a/05-async-await/kedi-foto-uygulamasi/style.css
+++ b/05-async-await/kedi-foto-uygulamasi/style.css
@@ -16,7 +16,9 @@ div {
     border-radius: 20px;
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 350px;
+    max-width: 700px;
+    width:90%;
+    margin:auto;
   }
   
   /* Başlık */
@@ -79,18 +81,21 @@ button:disabled {
     padding: 15px;
     margin-top: 20px;
     box-shadow: 0px 4px 12px rgba(0,0,0,0.05);
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #favList {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 15px;
     justify-items: center;
     margin-top: 15px;
   }
   
   #favList img {
-    width: 150px;
+    width: 100%;
     height: 120px;
     object-fit: cover;
     border-radius: 15px;
